Incrementors and adjustable parameters are funtional; started on bounds for face detection.

--- a/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVison.Core.csproj
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVison.Core.csproj
@@ -91,6 +91,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Detectors\BaseDetector.cs" />
+    <Compile Include="Detectors\ParameterProfile.cs" />
     <Compile Include="Detectors\FaceDetection\JavsFacesEmgu.cs" />
     <Compile Include="Detectors\PedestrianDetection\JavsPerson.cs" />
     <Compile Include="Helper\CameraManager.cs" />
