--- a/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI.csproj
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI.csproj
@@ -109,6 +109,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="APIClientWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\LabeledIncrementor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -121,6 +125,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="APIClientWindow.xaml.cs">
+      <DependentUpon>APIClientWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
