--- a/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVison.Core.csproj
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVison.Core.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Detectors\PedestrianDetection\JavsPerson.cs" />
     <Compile Include="Helper\CameraManager.cs" />
     <Compile Include="Helper\MatConverter.cs" />
+    <Compile Include="Helper\StreamConverter.cs" />
     <Compile Include="Interfaces\IDetect.cs" />
     <Compile Include="Detectors\MotionDetection\JavsMotion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
