Sooo many changes. hope is lost for using source control right

--- a/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVision.Core.csproj
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVison.Core/JAVS.ComputerVision.Core.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Detectors\BaseDetector.cs" />
+    <Compile Include="Detectors\FaceDetection\JAVSFaceCropper.cs" />
     <Compile Include="Detectors\FaceDetection\JAVSFaceTrainer.cs" />
     <Compile Include="Detectors\FaceDetection\JAVSFacialRecognizer.cs" />
     <Compile Include="Detectors\ParameterProfile.cs" />
